Fix flipping of project cards to inline block, overflow hidden

--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -23,10 +23,11 @@
 
 .projects_show_container {
   margin: auto ;
+  text-align: center;
 }
 
 .projects_show{
-  display: block;
+  display: inline-block;
 }
 
 
@@ -109,7 +110,7 @@ img.photo {
 /*---------------------------*/
 
 figure, figcaption {
-  display: block;
+  display: inline-block;
 }
 
 /*.projects_show{
@@ -154,46 +155,37 @@ figure, figcaption {
 }
 
 .projects_show .flippable {
-  width: 100%;
+  /*width: 100%;*/
   -webkit-perspective: 1000;
   -moz-perspective: 1000;
-  margin: auto;
+/*  margin: auto;*/
 }
 
 .projects_show .front {
   position: relative;
-  margin: auto ;
-  margin-bottom: 2em;
+  overflow: hidden;
 }
 
 .projects_show .back {
   position: relative;
-  margin: auto ;
   display: none;
-  margin-bottom: 2em;
+  overflow: hidden;
+
 }
 
 .projects_show img {
   background-size: cover;
   height: 450px;
   width: 600px;
-  margin: 2px auto;
-/*  margin-bottom: 5px;*/
+/*  margin: 2px auto;*/
   position: relative;
-  background-size: cover;
- /* width: 100%;
-  height: 100%;*/
-/*  border: 1px solid #fff;
-  border: 1px solid #dfdfdf;
-  border: 1px solid rgba(96, 96, 96, 0.2)*/;
+
 }
 
 .projects_show figcaption{
   text-align: center;
   font-size:1.0em;
-/*  color:#454f40;*/
   letter-spacing:0.09em;
-  overflow: scroll;
 }
 
 
